CallBack use case implemented

--- a/src/components/CallBack/callBack.scss
+++ b/src/components/CallBack/callBack.scss
@@ -1,12 +1,8 @@
-.state-hook{
+.callback{
     &.container {
         display: flex;
         flex-direction: column;
         max-width: 400px;
         // justify-content: flex-start; Not needed as it's flex default
-    }
-    
-    .button-align-left {
-        float: left;
-    }
+    }    
 }
