--- a/src/components/CallBack/callBack.scss
+++ b/src/components/CallBack/callBack.scss
@@ -4,5 +4,14 @@
         flex-direction: column;
         max-width: 400px;
         // justify-content: flex-start; Not needed as it's flex default
-    }    
+    }
+
+    .header-content{
+        display: flex;
+        flex-direction: column;
+
+        .gap{
+            margin-bottom: 1em;
+        }
+    }
 }
