--- a/src/components/StateHook/stateHook.scss
+++ b/src/components/StateHook/stateHook.scss
@@ -2,11 +2,11 @@
     &.container {
         display: flex;
         flex-direction: column;
-        max-width: 400px;
         // justify-content: flex-start; Not needed as it's flex default
     }
-    
-    .button-align-left {
-        float: left;
+
+    .form-row{
+        display: flex;
+        flex-direction: row;
     }
 }
