--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -1,12 +1,19 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
+
 .components{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    max-width: 50%;
+    justify-content: space-between;
+    max-width: 100%;
 }
 
 .title{
     font-size: 1.2em;
     font-weight: bold;
     margin: 0.5em;
+}
+
+.form-row{
+    display: flex;
+    flex-direction: row;
 }
