--- a/src/components/UseRef/useRef.scss
+++ b/src/components/UseRef/useRef.scss
@@ -1,7 +1,7 @@
-.state-hook{
+.useRef{   
     &.container {
         display: flex;
         flex-direction: column;
         // justify-content: flex-start; Not needed as it's flex default
-    }
+    }    
 }
