--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    flex-wrap: wrap-reverse;
+    //flex-wrap: wrap;
 }
 
 .title{
